Bug 1346634 - Only notify push observers from xpcom queue; r=snorp a=lizzard

Until bug 1344892 is fixed, only notify push observers (and not all
observers) from the XPCOM nsThread event queue, to avoid regressions
such as session restore breaking.